<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <Button
        android:id="@+id/btnAcceder"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="169dp"
        android:layout_height="39dp"
        android:background="@color/black"
        android:text="@string/btnAcceder"
        android:textColorLink="#F6F3F3"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:rippleColor="#FBFBFB"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="678dp" />

    <TextView
        android:id="@+id/txtSubtitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/txtSubtitulo2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtOtros" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/txtTitulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtOtros"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtotro"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/txtnombres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txtnombres"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtdni"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidos" />

    <TextView
        android:id="@+id/txtSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/txtsubtitulo"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="124dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtitulo">

        <CheckBox
            android:id="@+id/chkSQL"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:letterSpacing="0.1"
            android:text="@string/ckbSQL"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+id/chkVScode"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:letterSpacing="0.1"
            android:text="@string/chkvStudio"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+id/chkAndroid"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:letterSpacing="0.1"
            android:lineSpacingExtra="8sp"
            android:text="@string/cbkandroid"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+id/chkOtro"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:letterSpacing="0.1"
            android:lineSpacingExtra="8sp"
            android:text="@string/chkotro"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="10sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtCelular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtcelular"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtDni" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txtapellidos"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtnombres" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtemail"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtCelular" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="121dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtitulo2">

        <RadioButton
            android:id="@+id/rbAzul"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/rbazul"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/rbRojo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/rbrojo"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/rbVerde"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/rbverde"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/rbOtro"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/rbotro"
            android:textSize="10sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>